[gd_scene load_steps=5 format=3 uid="uid://cgkm0xgdjbd5d"]

[ext_resource type="Script" path="res://character_status_screen.gd" id="1_6a1bi"]
[ext_resource type="Texture2D" uid="uid://64k5dcii01vw" path="res://images/Chio Icon.png" id="1_b0yev"]
[ext_resource type="Texture2D" uid="uid://b66e3hbm3wq6x" path="res://images/Cursor.png" id="3_is7b7"]
[ext_resource type="Script" path="res://StatusPointer.gd" id="4_s8gbx"]

[node name="CharacterStatusScreen" type="Node2D"]
z_index = 5
script = ExtResource("1_6a1bi")

[node name="PauseBackground" type="ColorRect" parent="."]
offset_left = -100.0
offset_top = -59.0
offset_right = 1304.0
offset_bottom = 740.0
color = Color(0.137255, 0.258824, 0.356863, 1)

[node name="Sprite2D" type="Sprite2D" parent="PauseBackground"]
position = Vector2(396, 226)
scale = Vector2(0.7, 0.7)
texture = ExtResource("1_b0yev")

[node name="Name" type="Label" parent="PauseBackground"]
layout_mode = 0
offset_left = 319.0
offset_top = 337.0
offset_right = 492.0
offset_bottom = 447.0
theme_override_font_sizes/font_size = 80
text = "Chio"

[node name="Stats1" type="Label" parent="PauseBackground"]
layout_mode = 0
offset_left = 257.0
offset_top = 454.0
offset_right = 473.0
offset_bottom = 715.0
theme_override_font_sizes/font_size = 45
text = "HP: 5000
Atk: 45   
Mag: 62  
Spd: 10"

[node name="Stats2" type="Label" parent="PauseBackground"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.617
anchor_top = 0.044
anchor_right = 0.739
anchor_bottom = 0.198
offset_left = -396.268
offset_top = 418.844
offset_right = -255.166
offset_bottom = 567.644
theme_override_font_sizes/font_size = 45
text = "SP:    320
Def:    36
Mgdf: 35"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(577, 321)

[node name="Equipment" type="Node2D" parent="."]
position = Vector2(721, 83)
scale = Vector2(1.4, 1.4)

[node name="Weapon 1" type="Label" parent="Equipment"]
offset_right = 108.0
offset_bottom = 205.0
text = "Weapon 1:
Weapon 2:
Head:
Armor:
Gloves:
Legs:
Shoes:
Accessory 1:
Accessory 2:"

[node name="Pointer" type="Sprite2D" parent="."]
visible = false
position = Vector2(679, 102)
texture = ExtResource("3_is7b7")
script = ExtResource("4_s8gbx")
